# Folium

./: .gitignore  README.md  package-lock.json  package.json
Folium/: README.md
Folium/docs/: test_plan.md
Ledger/: README.md
Ledger/src/lib/components/: Footer.svelte  Navbar.svelte  Unit.svelte
Ledger/src/routes/classes/[classId]/: +page.svelte
docs/: design.md  routes.md  test_plan.md
folium-server/: .gitignore  CMakeLists.txt  README.md  schema.sql  seed.sql
folium-server/docs/: HTTP_RESPONSE_CODE_CHEAT_SHEET.md  ROUTES.md  STYLE.md
folium-server/include/: core.h
folium-server/src/: api_routes.cc  api_routes.h  auth.cc  auth.h  auth.hpp  core.cc  core.h  core.hpp  data_access_layer.cc  data_access_layer.h  data_access_layer.hpp  dispatcher.cc  dispatcher.h  dispatcher.hpp  f_task.h  f_task.hpp  fifo_buffered.h  fifo_channel.h  fifo_util.h  gateway.hpp  http_gateway.cc  http_gateway.h  logger.cc  logger.h  logger.hpp  main.cc  main.cpp  pipe-filter.cpp  test.cc  util.h  version.h.in
folium-server/tests/: test_auth.cc  test_core.cc  test_dal.cc  test_dispatcher.cc  test_gateway.cc  test_logger.cc
ledger/: .gitignore  README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
ledger/prototypes/: big_note_server_test.py  indicator_test.py
ledger/src/lib/: FoliumService.ts  TestComponent.svelte
ledger/src/lib/components/: FetchOverride.svelte  Footer.svelte  Navbar.svelte  Note.svelte  Notification.svelte
ledger/src/lib/stores/: notification.ts
ledger/src/routes/: +layout.svelte  +page.svelte
ledger/src/routes/about/: +page.svelte
ledger/src/routes/account/: +page.svelte
ledger/src/routes/classes/: +page.svelte
ledger/src/routes/classes/[classId]/: +page.svelte
ledger/src/routes/contact/: +page.svelte
ledger/src/routes/help/: +page.svelte
ledger/src/routes/log-in/: +page.svelte
ledger/src/routes/profile/: +page.svelte
ledger/src/routes/register/: +page.svelte
src/lib/components/: Article.svelte  Footer.svelte
src/routes/: +layout.svelte  +page.svelte
tests/: big_note_server_test.py  indicator_test.py
